--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			xhttp.send();
 			}
 	</script>
+	<script type="text/javascript"> var password = "please"; var x = prompt("Enter in the password "," "); if (x.toLowerCase() == password) { alert("Come right in \n \n You've entered in the right password"); window.location = "good.htm"; } else { window.location = "bad.htm"; } </script>
 	<style>
 		@font-face {
 			font-family: 'Roboto';
